--- a/intex.html
+++ b/intex.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Joao</title>
 </head>
-<body>
+<body>  
+    <divc class="yasmin doida">
 <h1>
-aula 2
+isto mesmo vacalos
 </h1>
+</divc>
 <img id="joa" src="download.jpeg" class="ima">
-<p></p>
+<p>mais vacalos</p>
 </body>
 </html>
+GitHub Docs
+GitHub Support
